--- a/wombat.yml
+++ b/wombat.yml
@@ -2,23 +2,23 @@ name: wombat
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2025.11.4=hca03da5_0
-  - expat=2.7.3=h982b769_0
-  - libcxx=20.1.8=hd7fd590_1
-  - libffi=3.4.4=hca03da5_1
-  - libzlib=1.3.1=h5f15de7_0
-  - ncurses=6.5=hee39554_0
-  - openssl=3.0.18=h9b4081a_0
-  - pip=25.2=pyhc872135_1
-  - python=3.12.4=h99e199e_1
-  - readline=8.3=h0b18652_0
-  - setuptools=80.9.0=py312hca03da5_0
-  - sqlite=3.51.0=hab6afd1_0
-  - tk=8.6.15=hcd8a7d5_0
-  - wheel=0.45.1=py312hca03da5_0
-  - xz=5.6.4=h80987f9_1
-  - zlib=1.3.1=h5f15de7_0
+  - bzip2=1.0.8
+  - ca-certificates=2025.11.4
+  - expat=2.7.3
+  - libcxx=20.1.8
+  - libffi=3.4.4
+  - libzlib=1.3.1
+  - ncurses=6.5
+  - openssl=3.0.18
+  - pip=25.2
+  - python=3.12.4
+  - readline=8.3
+  - setuptools=80.9.0
+  - sqlite=3.51.0
+  - tk=8.6.15
+  - wheel=0.45.1
+  - xz=5.6.4
+  - zlib=1.3.1
   - pip:
       - aiapy==0.10.2
       - aioftp==0.27.2
@@ -88,4 +88,3 @@ dependencies:
       - yarl==1.22.0
       - zarr==3.1.3
       - zeep==4.3.2
-prefix: /Users/kaycd1/miniconda3/envs/wombat
